--- a/components/com_recruit/models/forms/requesthr.xml
+++ b/components/com_recruit/models/forms/requesthr.xml
@@ -60,9 +60,41 @@
 		/>
 
 		<field name="description"
-			   type="editor"
+			   type="textarea"
 			   label="описание задачи"
 			   description="описание задачи"
+			   required="true"
+			   rows="10"
+			   cols="5"
+		/>
+
+		<field name="priority" type="list" default="" required="true" label="приоритетность" description="">
+			<option value="">Выберите опцию</option>
+			<option value="0">нормальная</option>
+			<option value="1">высокая</option>
+		</field>
+
+		<field
+				name="salary"
+				type="text"
+				label="заработная плата"
+				description="заработная плата"
+				size="40"
+				class="inputbox"
+				default=""
+				rows="10"
+				cols="50"
+		/>
+
+		<field name="manual"
+			   type="checkbox"
+			   label="расчет вручную"
+			   description="отключение автоматического расчета"
+			   value="1" />
+
+		<field name="estimate_date"
+			   type="calendar"
+			   label="расчетная дата"
 		/>
 
 		<field
