--- a/components/com_recruit/models/forms/requestvr.xml
+++ b/components/com_recruit/models/forms/requestvr.xml
@@ -14,6 +14,17 @@
 		/>
 
 		<field
+				name="name"
+				type="text"
+				label="название вакансии"
+				description="название вакансии"
+				size="40"
+				class="inputbox"
+				required="true"
+				default=""
+		/>
+
+		<field
 				name="type_id"
 				type="sql"
 				default="10"
@@ -86,6 +97,11 @@
 			   label="расчет вручную"
 			   description="отключение автоматического расчета"
 			   value="1" />
+
+		<field name="public_date"
+			   type="calendar"
+			   label="дата размещения"
+		/>
 
 		<field name="estimate_date"
 			   type="calendar"
