--- a/components/com_recruit/models/forms/requestvr.xml
+++ b/components/com_recruit/models/forms/requestvr.xml
@@ -39,7 +39,8 @@
 				default="10"
 				label="ФИО сотрудника"
 				query="SELECT id AS value, name AS employee_id  FROM #__recruit_employee"
-				required="true"
+				header="Выберите опцию"
+				class="superuser"
 		/>
 
 		<field
@@ -68,6 +69,7 @@
 			   type="calendar"
 			   default="NOW"
 			   label="дата размещения"
+			   class="superuser"
 		/>
 
 		<field name="description"
@@ -96,20 +98,28 @@
 			   type="checkbox"
 			   label="расчет вручную"
 			   description="отключение автоматического расчета"
-			   value="1" />
+			   value="1"
+			   class="superuser"/>
 
 		<field name="public_date"
 			   type="calendar"
 			   label="дата размещения"
+			   class="superuser"
 		/>
 
 		<field name="estimate_date"
 			   type="calendar"
 			   label="расчетная дата"
+			   class="superuser"
 		/>
 
 		<field
 				name="evid"
+				type="hidden"
+		/>
+
+		<field
+				name="created_by"
 				type="hidden"
 		/>
 
