--- a/components/com_recruit/models/forms/translatorwritten.xml
+++ b/components/com_recruit/models/forms/translatorwritten.xml
@@ -4,7 +4,7 @@
 	>
 
 		<field
-				name="additionform[language_pair]"
+				name="translatorwritten[language_pair]"
 				type="text"
 				label="Языковая пара"
 				description="Языковая пара"
@@ -15,7 +15,7 @@
 		/>
 
 		<field
-				name="additionform[theme]"
+				name="translatorwritten[theme]"
 				type="text"
 				label="Тематика"
 				description="Тематика"
@@ -26,7 +26,7 @@
 		/>
 
 		<field
-				name="additionform[size]"
+				name="translatorwritten[size]"
 				type="text"
 				label="Объем"
 				description="Объем"
@@ -37,7 +37,7 @@
 		/>
 
 		<field
-				name="additionform[period]"
+				name="translatorwritten[period]"
 				type="text"
 				label="Сроки"
 				description="Сроки"
@@ -48,7 +48,7 @@
 		/>
 
 		<field
-				name="additionform[price_for_customer]"
+				name="translatorwritten[price_for_customer]"
 				type="text"
 				label="Цена для заказчика"
 				description="Цена для заказчика"
@@ -59,7 +59,7 @@
 		/>
 
 		<field
-				name="additionform[AM]"
+				name="translatorwritten[AM]"
 				type="text"
 				label="АМ"
 				description="АМ"
@@ -70,7 +70,7 @@
 		/>
 
 		<field
-				name="additionform[customer_type]"
+				name="translatorwritten[customer_type]"
 				type="text"
 				label="Тип клиента"
 				description="Тип клиента"
@@ -81,7 +81,7 @@
 		/>
 
 		<field
-				name="additionform[request_or_approved_order]"
+				name="translatorwritten[request_or_approved_order]"
 				type="text"
 				label="Запрос или утвержденный заказ?"
 				description="Запрос или утвержденный заказ?"
@@ -92,7 +92,7 @@
 		/>
 
 		<field
-				name="additionform[request_id]"
+				name="translatorwritten[request_id]"
 				type="hidden"
 		/>
 
