added the field addtion information

--- a/components/com_recruit/models/forms/requestvr.xml
+++ b/components/com_recruit/models/forms/requestvr.xml
@@ -121,6 +121,14 @@
 			   class="superuser"
 		/>
 
+		<field name="information"
+			   type="textarea"
+			   label="дополнительная информация"
+			   description="дополнительная информация"
+			   rows="10"
+			   cols="5"
+		/>
+
 		<field
 				name="evid"
 				type="hidden"
