--- a/components/com_recruit/models/forms/requesthr.xml
+++ b/components/com_recruit/models/forms/requesthr.xml
@@ -4,6 +4,9 @@
 	>
 
 
+
+
+
 		<field
 				name="typeemployee_id"
 				type="sql"
@@ -52,14 +55,14 @@
 
 		<field
 				name="department"
-				type="text"
+				type="sql"
+				default="10"
 				label="Подразделение"
-				description="Подразделение"
-				size="40"
-				class="inputbox"
-				required="true"
-				default=""
-		/>
+				query="SELECT id AS value, name AS department  FROM #__recruit_units"
+				required="true" >
+			<option value="">Выберите опцию</option>
+		</field>
+
 		<field
 				name="department_head"
 				type="text"
